2004-01-11  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__adasockets.adb:
	(Get_Send_Buffer): Moved to specification.
	(Get_Receive_Buffer): New routine.

	* aws-net-std__gnat.adb:
	Update copyright years.
	(Get_Send_Buffer): New routine.
	(Get_Receive_Buffer): New routine.

2004-01-09  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__adasockets.adb:
	Update copyright years.
	(Wait_For): Check to do not overflow on too big timeout.

2004-01-08  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__adasockets.adb:
	(Wait_For): Use Ada enumerator Wait_Mode instead of C.int.
	(Send): Check for timeout before each internal write buffer.
	(Get_Send_Buffer): New routine.
	(Raise_Exception): New routine.

	* aws-net-std__gnat.adb:
	(Send): Raise Socket_Error if not all data written.

2004-01-07  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__adasockets.adb:
	(Wait_For): New routine.
	(Receive): Use Wait_For for timeout control.
	(Send): Idem.

2004-01-07  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__gnat.adb, aws-net-std__adasockets.adb:
	(Socket_Hidden): Put original socket inside record. It is for shorter
	 access (Socket.S.FD instead of SFD (Socket.S.all)) and prepear place
	 for Socket_Set_Type for timeout implementation.

2004-01-01  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-os_lib__gnat.adb:
	Fix typo in comment.
        Update copyright notice.

2003-11-25  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-os_lib__posix.adb:
	(Base_Name): New routine.
	(File_Extension): Idem.
	(File_Name): Idem.
	(For_Every_Directory_Entry): Idem.
	Put routines in alphabetical order.
	Reformat code.
	Update copyright notice.

	* aws-os_lib__gnat.adb:
	(Dir_Type_Hidden): Removed.
	(G_Dir_Type): Removed.
	(Close): Idem.
	(For_Every_Directory_Entry): New routine. Generic iterator instead
	 of the Open/Read/Close. Cleaner, code is simpler.
	(Open): Removed.
	(Read): Idem.
	Minor reformatting.

2003-11-17  Pascal Obry  <p.obry@wanadoo.fr>
