@@ -151,11 +151,11 @@ package body AWS.Net.Std is
       return Integer (Sockets.Get_FD (Socket.S.FD));
    end Get_FD;
 
-   ------------------------
-   -- Get_Receive_Buffer --
-   ------------------------
+   -----------------------------
+   -- Get_Receive_Buffer_Size --
+   -----------------------------
 
-   function Get_Receive_Buffer (Socket : in Socket_Type) return Natural is
+   function Get_Receive_Buffer_Size (Socket : in Socket_Type) return Natural is
       use Sockets;
       Size : Natural;
    begin
@@ -163,15 +163,15 @@ package body AWS.Net.Std is
 
       return Size;
    exception
-      when E : others =>
-         Raise_Exception (E, "Get_Receive_Buffer");
-   end Get_Receive_Buffer;
+      when E : Sockets.Socket_Error =>
+         Raise_Exception (E, "Get_Receive_Buffer_Size");
+   end Get_Receive_Buffer_Size;
 
    ---------------------
    -- Get_Send_Buffer --
    ---------------------
 
-   function Get_Send_Buffer (Socket : in Socket_Type) return Natural is
+   function Get_Send_Buffer_Size (Socket : in Socket_Type) return Natural is
       use Sockets;
       Size : Natural;
    begin
@@ -180,8 +180,8 @@ package body AWS.Net.Std is
       return Size;
    exception
       when E : Sockets.Socket_Error =>
-         Raise_Exception (E, "Get_Send_Buffer");
-   end Get_Send_Buffer;
+         Raise_Exception (E, "Get_Send_Buffer_Size");
+   end Get_Send_Buffer_Size;
 
    ---------------
    -- Host_Name --
@@ -338,11 +338,11 @@ package body AWS.Net.Std is
       end if;
    end Set_Blocking_Mode;
 
-   ------------------------
-   -- Set_Receive_Buffer --
-   ------------------------
+   -----------------------------
+   -- Set_Receive_Buffer_Size --
+   -----------------------------
 
-   procedure Set_Receive_Buffer
+   procedure Set_Receive_Buffer_Size
      (Socket : in Socket_Type;
       Size   : in Natural)
    is
@@ -350,15 +350,15 @@ package body AWS.Net.Std is
    begin
       Setsockopt (Socket.S.FD, Optname => SO_RCVBUF, Optval => Size);
    exception
-      when E : others =>
-         Raise_Exception (E, "Set_Receive_Buffer");
-   end Set_Receive_Buffer;
+      when E : Sockets.Socket_Error =>
+         Raise_Exception (E, "Set_Receive_Buffer_Size");
+   end Set_Receive_Buffer_Size;
 
-   ---------------------
-   -- Set_Send_Buffer --
-   ---------------------
+   --------------------------
+   -- Set_Send_Buffer_Size --
+   --------------------------
 
-   procedure Set_Send_Buffer
+   procedure Set_Send_Buffer_Size
      (Socket : in Socket_Type;
       Size   : in Natural)
    is
@@ -366,9 +366,9 @@ package body AWS.Net.Std is
    begin
       Setsockopt (Socket.S.FD, Optname => SO_SNDBUF, Optval => Size);
    exception
-      when E : others =>
-         Raise_Exception (E, "Set_Send_Buffer");
-   end Set_Send_Buffer;
+      when E : Sockets.Socket_Error =>
+         Raise_Exception (E, "Set_Send_Buffer_Size");
+   end Set_Send_Buffer_Size;
 
    --------------
    -- Shutdown --
